--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-table{
+/* table{
     border: 3px solid blue;
     background-color: rgb(252, 252, 252);
     margin: auto;
@@ -22,3 +22,7 @@ h1{
     text-align: center;
     color: darkblue;
 }
+ 
+.estiloPuntos{
+    font-weight: bold; 
+} */
